--- a/styles/6-components/content.css
+++ b/styles/6-components/content.css
@@ -1,6 +1,6 @@
 /*--------------------------------//
 //                                //
-//            Container           //
+//             Content            //
 //                                //
 //--------------------------------*/
 .content {
